minor change to reviews

--- a/BackEndCapstone/Views/Tutorials/Details.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Details.cshtml
@@ -51,7 +51,7 @@
                             @if (tutorial.User.FirstName != null)
                             {
                                 <h6 class="card-title">
-                                    Username:
+                                    User:
                                     @tutorial.User.FirstName
                                 </h6>
                             }
