got rid of random o on products page

--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -40,7 +40,7 @@
                     </form>
                 </div>
             }
-        </div>o
+        </div>
 
         <div class="col">
 
