--- a/BackEndCapstone/Views/ProductReviews/Create.cshtml
+++ b/BackEndCapstone/Views/ProductReviews/Create.cshtml
@@ -22,7 +22,7 @@
 
             <div class="form-group">
 
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-outline-danger btn-xxs" />
             </div>
         </form>
     </div>
