--- a/BackEndCapstone/Views/ProductTypes/Edit.cshtml
+++ b/BackEndCapstone/Views/ProductTypes/Edit.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-outline-danger btn-xxs" />
             </div>
         </form>
     </div>
