--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -34,7 +34,7 @@
                         <div class="input-group">
                             <input type="text" name="searchString" class="form-control" placeholder="Gemstones/Products/Product Types" />
                             <span class="input-group-btn">
-                                <input type="submit" value="Search" class="btn btn-primary" />
+                                <input type="submit" value="Search" class="btn btn-outline-danger btn-xxs" />
                             </span>
                         </div>
                     </form>
